5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1679_1100.log
== TEST (2019-05-02 01:57:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = invalido
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:57:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = invalido
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.164367
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:58:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = invalido
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 01:59:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = invalido
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.203211
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:

-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 01:59:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = invalido
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:00:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:00:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:00:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:00:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.183745
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:01:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:02:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.125202
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:07:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:07:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:08:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:08:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:09:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garça"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:09:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:09:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.203233
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:12:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:12:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.126783
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:13:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:13:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.150903
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:15:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:34:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if(cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.20743
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:34:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor de uma cedula: "))
if cedula==2:
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:40:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor: "))
if (cedula==2):
	mensagem = "Tartaruga"
elif(cedula==5):
	mensagem = "Garca"
elif(cedula==10):
	mensagem = "Arara"
elif(cedula==20):
	mensagem = "Mico-leao-dourado"
elif(cedula==50):
	mensagem = "Onca-pintada"
elif(cedula==100):
	mensagem = "Garoupa"
else:
	mensagem = "invalido"
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.1465
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:43:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor: "))
if (cedula==2):
	mensagem = ("Tartaruga")
elif(cedula==5):
	mensagem = ("Garca")
elif(cedula==10):
	mensagem = ("Arara")
elif(cedula==20):
	mensagem = ("Mico-leao-dourado")
elif(cedula==50):
	mensagem = ("Onca-pintada")
elif(cedula==100):
	mensagem = ("Garoupa")
else:
	mensagem = ("invalido")
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.205699
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:43:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor: "))
if (cedula==2):
	mensagem = ("Tartaruga")
elif(cedula==5):
	mensagem = ("Garca")
elif(cedula==10):
	mensagem = ("Arara")
elif(cedula==20):
	mensagem = ("Mico-leao-dourado")
elif(cedula==50):
	mensagem = ("Onca-pintada")
elif(cedula==100):
	mensagem = ("Garoupa")
else:
	mensagem = ("invalido")
print("Entrada:", cedula)
print("Animal:", mensagem)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 02:44:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
cedula = int(input("valor: "))
if (cedula==2):
	mensagem = ("Tartaruga")
elif(cedula==5):
	mensagem = ("Garca")
elif(cedula==10):
	mensagem = ("Arara")
elif(cedula==20):
	mensagem = ("Mico-leao-dourado")
elif(cedula==50):
	mensagem = ("Onca-pintada")
elif(cedula==100):
	mensagem = ("Garoupa")
else:
	mensagem = ("invalido")
print("Entrada:", cedula)
print("Animal:", mensagem)
-- EXECUTION TIME:
0.205371
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:20:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:21:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- EXECUTION TIME:
0.271777
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:23:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2,5,10,20,50,100):
	print("Animal: invalido")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Tartaruga")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:23:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2,5,10,20,50,100):
	print("Animal: invalido")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: Tartaruga")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:25:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2,5,10,20,50,100):
	print("Animal: invalido")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
elif(x==2):
	print("Animal: Tartaruga")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:25:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2,5,10,20,50,100):
	print("Animal: invalido")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
elif(x==2):
	print("Animal: Tartaruga")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:25:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2,5,10,20,50,100):
	print("Animal: invalido")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
elif(x==2):
	print("Animal: Tartaruga")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:26:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x!=2,5,10,20,50,100):
	print("Animal: invalido")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
elif(x==2):
	print("Animal: Tartaruga")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:27:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 09:27:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:28:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- EXECUTION TIME:
0.185158
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:33:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:33:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- EXECUTION TIME:
0.14561
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:48:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
print("Entrada:", x)
if (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print("Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
else:
	print("Animal: invalido")

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:51:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))

if (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 
print("Entrada:", x)
print(mensagem)2


-- ERROR:
File "XXXX", line 21
    print(mensagem)2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:52:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))

if (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 
print("Entrada:", x)
print(mensagem)


-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 15:52:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))

if (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 
print("Entrada:", x)
print(mensagem)


-- EXECUTION TIME:
0.691277
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:56:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x =!10 and x!=20 and x!=50 and x!=100):
	print("Entrada:", x)
	print("Entrada:, invalida")
if (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 

print(mensagem)


-- ERROR:
File "XXXX", line 5
    if(x != 2 and x != 5 and x =!10 and x!=20 and x!=50 and x!=100):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:56:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x =!10 and x!=20 and x!=50 and x!=100):
	print("Entrada:", x)
	print("Entrada:, invalida")
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 

print(mensagem)


-- ERROR:
File "XXXX", line 5
    if(x != 2 and x != 5 and x =!10 and x!=20 and x!=50 and x!=100):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:57:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Entrada:, invalida")
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 

print(mensagem)


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 15:57:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Entrada:, invalida")
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 

print(mensagem)


-- EXECUTION TIME:
0.54553
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Entrada:, invalida
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:57:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Entrada:, invalida")
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 

print(mensagem)


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:57:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Entrada:, invalida")
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 

print(mensagem)


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:58:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)

elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"
else:
	mensagem = "Animal: invalido" 



-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:59:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	mensagem = "Animal: invalido" 
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"

print(mensagem)


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 15:59:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	mensagem = "Animal: invalido" 
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"

print(mensagem)


-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 15:59:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	mensagem = "Animal: invalido" 
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"

print(mensagem)


-- EXECUTION TIME:
0.630792
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 15:59:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	mensagem = "Animal: Invalido" 
elif (x==2):
	mensagem = "Animal: Tartaruga"
elif(x==5):
	mensagem = "Animal: Garca"
elif(x==10):
	mensagem = "Animal: Arara"
elif(x==20):
	mensagem = "Animal: Mico-leao-dourado"
elif(x==50):
	mensagem = "Animal: Onca-pintada" 
elif(x==100):
	mensagem = "Animal: Garoupa"

print(mensagem)


-- EXECUTION TIME:
0.698152
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Animal: Invalido") 
elif (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print( "Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada") 
elif(x==100):
	print("Animal: Garoupa")

print(mensagem)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Animal: Invalido") 
elif (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print( "Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada") 
elif(x==100):
	print("Animal: Garoupa")




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Animal: Invalido") 
elif (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print( "Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada") 
elif(x==100):
	print("Animal: Garoupa")




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Animal: Invalido") 
elif (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print( "Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada") 
elif(x==100):
	print("Animal: Garoupa")




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:06:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Animal: Invalido") 
elif (x==2):
	print("Animal: Tartaruga")
elif(x==5):
	print( "Animal: Garca")
elif(x==10):
	print("Animal: Arara")
elif(x==20):
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Animal: Onca-pintada") 
elif(x==100):
	print("Animal: Garoupa")




-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:07:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Animal: Invalido") 
elif (x==2):
	print("Entrada:", x)
	print("Animal: Tartaruga")
elif(x==5):
	print("Entrada:", x)
	print( "Animal: Garca")
elif(x==10):
	print("Entrada:", x)
	print("Animal: Arara")
elif(x==20):
	print("Entrada:", x)
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Entrada:", x)
	print("Animal: Onca-pintada") 
elif(x==100):
	print("Entrada:", x)
	print("Animal: Garoupa")




-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 16:07:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor: "))
if(x != 2 and x != 5 and x !=10 and x!=20 and x !=50 and x!=100):
	print("Entrada:", x)
	print("Animal: Invalido") 
elif (x==2):
	print("Entrada:", x)
	print("Animal: Tartaruga")
elif(x==5):
	print("Entrada:", x)
	print( "Animal: Garca")
elif(x==10):
	print("Entrada:", x)
	print("Animal: Arara")
elif(x==20):
	print("Entrada:", x)
	print("Animal: Mico-leao-dourado")
elif(x==50):
	print("Entrada:", x)
	print("Animal: Onca-pintada") 
elif(x==100):
	print("Entrada:", x)
	print("Animal: Garoupa")




-- EXECUTION TIME:
0.763055
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
